@@ -1,77 +1,105 @@
 package com.gamelib.gamelib.service;
 
 import com.gamelib.gamelib.dto.GameDto;
+import com.gamelib.gamelib.model.Company;
 import com.gamelib.gamelib.model.Game;
+import com.gamelib.gamelib.repository.CompanyRepository; // Убедитесь, что у вас есть CompanyRepository
 import com.gamelib.gamelib.repository.GameRepository;
+import jakarta.transaction.Transactional;
 import org.springframework.stereotype.Service;
 
+import java.time.LocalDate;
+import java.util.HashSet;
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.Set;
 
 @Service
 public class GameService {
-
     private final GameRepository gameRepository;
+    private final CompanyRepository companyRepository;
 
-    public GameService(GameRepository gameRepository) {
+    public GameService(GameRepository gameRepository, CompanyRepository companyRepository) {
         this.gameRepository = gameRepository;
+        this.companyRepository = companyRepository;
     }
 
-    // Получить все игры
     public List<GameDto> getAllGames() {
-        return gameRepository.findAll().stream()
-                .map(GameDto::new)  // преобразуем Game в GameDto
-                .collect(Collectors.toList());
+        return gameRepository.findAll().stream().map(GameDto::new).toList();
     }
 
-    // Получить игру по ID
-    public Optional<Game> getGameById(Long id) {
+    public java.util.Optional<Game> getGameById(Long id) {
         return gameRepository.findById(id);
     }
 
-    // Создать новую игру
+    @Transactional
     public Game createGame(GameDto gameDto) {
-        Game game = new Game(gameDto.getTitle(), gameDto.getReleaseDate(), gameDto.getUpDate(), gameDto.getAvgOnline(), gameDto.getReviewsSum(), gameDto.getCompanies());
+        Game game = new Game(
+                gameDto.getTitle(),
+                gameDto.getReleaseDate(),
+                gameDto.getUpdateDate(),
+                gameDto.getAvgOnline(),
+                gameDto.getReviewsSum(),
+                new HashSet<>()
+        );
+
+        if (game.getUpdateDate() == null) {
+            game.setUpdateDate(LocalDate.now());
+        }
+
+        if (gameDto.getCompanyIds() != null && !gameDto.getCompanyIds().isEmpty()) {
+            Set<Company> companies = new HashSet<>();
+            for (Long companyId : gameDto.getCompanyIds()) {
+                companyRepository.findById(companyId).ifPresent(company -> {
+                    companies.add(company);
+                    // Обновляем другую сторону связи
+                    if (company.getGames() == null) {
+                        company.setGames(new HashSet<>());
+                    }
+                    company.getGames().add(game);
+                });
+            }
+            game.setCompanies(companies);
+        }
+
         return gameRepository.save(game);
     }
 
-    // Обновить игру
+    @Transactional
     public Game updateGame(Long id, GameDto gameDto) {
         return gameRepository.findById(id)
-                .map(game -> {
-                    game.setTitle(gameDto.getTitle());
-                    game.setReleaseDate(gameDto.getReleaseDate());
-                    game.setUpDate(gameDto.getUpDate());
-                    game.setAvgOnline(gameDto.getAvgOnline());
-                    game.setReviewsSum(gameDto.getReviewsSum());
-                    game.setCompanies(gameDto.getCompanies());
-                    return gameRepository.save(game);
+                .map(existingGame -> {
+                    existingGame.setTitle(gameDto.getTitle());
+                    existingGame.setReleaseDate(gameDto.getReleaseDate());
+                    existingGame.setUpdateDate(gameDto.getUpdateDate());
+                    existingGame.setAvgOnline(gameDto.getAvgOnline());
+                    existingGame.setReviewsSum(gameDto.getReviewsSum());
+                    // Обновление связей с компаниями аналогично createGame, если необходимо
+                    return gameRepository.save(existingGame);
                 })
-                .orElse(null);  // если игра не найдена, вернуть null
+                .orElse(null);
     }
 
-    // Частичное обновление игры
+    @Transactional
     public Game patchGame(Long id, GameDto gameDto) {
         return gameRepository.findById(id)
-                .map(game -> {
-                    if (gameDto.getTitle() != null) game.setTitle(gameDto.getTitle());
-                    if (gameDto.getReleaseDate() != null) game.setReleaseDate(gameDto.getReleaseDate());
-                    if (gameDto.getUpDate() != null) game.setUpDate(gameDto.getUpDate());
-                    if (gameDto.getAvgOnline() >= 0) game.setAvgOnline(gameDto.getAvgOnline());
-                    if (gameDto.getReviewsSum() >= 0) game.setReviewsSum(gameDto.getReviewsSum());
-                    if (gameDto.getCompanies() != null) game.setCompanies(gameDto.getCompanies());
-                    return gameRepository.save(game);
+                .map(existingGame -> {
+                    if (gameDto.getTitle() != null) existingGame.setTitle(gameDto.getTitle());
+                    if (gameDto.getReleaseDate() != null) existingGame.setReleaseDate(gameDto.getReleaseDate());
+                    if (gameDto.getUpdateDate() != null) existingGame.setUpdateDate(gameDto.getUpdateDate());
+                    if (gameDto.getAvgOnline() > 0) existingGame.setAvgOnline(gameDto.getAvgOnline());
+                    if (gameDto.getReviewsSum() > 0) existingGame.setReviewsSum(gameDto.getReviewsSum());
+                    // Обновление связей с компаниями аналогично createGame, если необходимо
+                    return gameRepository.save(existingGame);
                 })
-                .orElse(null);  // если игра не найдена, вернуть null
+                .orElse(null);
     }
 
-    // Удалить игру
     public boolean deleteGame(Long id) {
-        if (gameRepository.existsById(id)) {
-            gameRepository.deleteById(id);
-            return true;
-        }
-        return false;
+        return gameRepository.findById(id)
+                .map(game -> {
+                    gameRepository.delete(game);
+                    return true;
+                })
+                .orElse(false);
     }
 }
